feat: add reset password backend and other fixes
